@@ -1,6 +1,10 @@
 1.0 beta 5 (unreleased)
 -----------------------
 
+- Accepts entries without a title, which is allowed in rss.
+  See http://cyber.law.harvard.edu/rss/rss.html#hrelementsOfLtitemgt
+  [maurits]
+
 
 1.0 beta 4 (20 May 2008)
 ------------------------
@@ -28,3 +32,5 @@
 
 1.0 beta 2 (2 January 2008)
 ---------------------------
+
+- History begins.
